Add containers for major page elements

--- a/index.html
+++ b/index.html
@@ -7,12 +7,19 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Antonia Follano</h1>
-    <h2>Front-End Web Developer</h2>
+    <div class="hero">
+        <h1>Antonia Follano</h1>
+        <h2>Front-End Web Developer</h2>
+    </div>
         
-    <h3>About</h3>
+    <div class="about"><h3>About</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit odio alias voluptatum. Mollitia cumque saepe earum vitae quaerat ipsa omnis dignissimos magni eos, nemo exercitationem autem. Impedit laboriosam vel blanditiis!</p>
-    <h3>Portfolio</h3>
+    </div>
+    <div class="portfolio">
+        <h3>Portfolio</h3>
+    </div>
+    <div class="contact">
     <h3>Contact</h3>
+    </div>
 </body>
 </html>
