Center and enlarge hero text

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="hero">
-        <h1>Antonia Follano</h1>
+        <h1>Antonia <br> Follano</h1>
         <h2>Front-End Web Developer</h2>
     </div>
         
