--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <div class="hero">
-        <h1>Antonia <br> Follano</h1>
-        <h2>Front-End Web Developer</h2>
+        <div>
+            <h1>Antonia <br> Follano</h1>
+            <h2>Front-End Web Developer</h2>
+        </div>
     </div>
         
     <div class="about"><h3>About</h3>
