Add profile image to About section

--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
             <h1>Antonia <br> Follano</h1>
             <h2>Front-End Web Developer</h2>
         </div>
+       
     </div>
+    <div class="halftone"></div>
         
     <div class="about"><h3>About</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit odio alias voluptatum. Mollitia cumque saepe earum vitae quaerat ipsa omnis dignissimos magni eos, nemo exercitationem autem. Impedit laboriosam vel blanditiis!</p>
+        <img class="profile-pic" src="images/squarepfp.jpg"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit odio alias voluptatum. Mollitia cumque saepe earum vitae quaerat ipsa omnis dignissimos magni eos, nemo exercitationem autem. Impedit laboriosam vel blanditiis!</p>
     </div>
     <div class="portfolio">
         <h3>Portfolio</h3>
