Add more containers to About for flexbox layout

--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
     <div class="halftone"></div>
         
     <div class="about"><h3>About</h3>
-        <img class="profile-pic" src="images/squarepfp.jpg"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit odio alias voluptatum. Mollitia cumque saepe earum vitae quaerat ipsa omnis dignissimos magni eos, nemo exercitationem autem. Impedit laboriosam vel blanditiis!</p>
+        <div class="about-container">
+            
+            <img class="profile-pic" src="images/squarepfp.jpg">
+            <div>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit odio alias voluptatum. Mollitia cumque saepe earum vitae quaerat ipsa omnis dignissimos magni eos, nemo exercitationem autem. Impedit laboriosam vel blanditiis!
+            </div>
+        </div>
     </div>
     <div class="portfolio">
         <h3>Portfolio</h3>
