--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit odio alias voluptatum. Mollitia cumque saepe earum vitae quaerat ipsa omnis dignissimos magni eos, nemo exercitationem autem. Impedit laboriosam vel blanditiis!
             </div>
         </div>
-        <div class="linkicon"></div><div class="linkicon"></div><div class="linkicon"></div>
+        <div class="profilelinks">
+            <div class="linkicon"></div>
+            <div class="linkicon"></div>
+            <div class="linkicon"></div>
+        </div>
     </div>
     <div class="portfolio">
         <h3>Portfolio</h3>
