Add footer container

--- a/index.html
+++ b/index.html
@@ -38,5 +38,8 @@
         <h3>Contact</h3>
         </div>
     </div>
+    <div class="footer">
+        Copyright © Antonia Follano 2024
+    </div>
 </body>
 </html>
