Include down button image in header

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <div>
             <h1>Antonia <br> Follano</h1>
             <h2>Front-End Web Developer</h2>
+            <img class="downicon" src="images/down.png">
         </div>
        
     </div>
