--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                 </div>
             </div>
             <div class="profilelinks">
-                <div class="linkicon"></div>
-                <div class="linkicon"></div>
-                <div class="linkicon"></div>
+                <img class="linkicon-img" src="images/icon-github.svg"> 
+                <img class="linkicon-img" src="images/linkedin-with-circle.svg"> 
+                <div class="linkicon"><img src="images/icon-resume.svg"> </div>
             </div>
         </div>
         <div class="portfolio">
